# regularization_heuristic_discovery_mli

./: README.md  compare_network_sizes_plots.py  compare_priors_plots.py  fit_bayesian_models.py  generate_experiments.py  pyproject.toml  train.py  vary_params.sh
data/: ranking_False_direction_False.json  ranking_False_direction_True.json  ranking_True_direction_False.json
inference_data/: comparison_priors_direction-regularized.csv  comparison_priors_direction-unregularized.csv  comparison_priors_none-regularized.csv  comparison_priors_none-unregularized.csv  comparison_priors_ranking-regularized.csv  comparison_priors_ranking-unregularized.csv
results/: vary_params_group1_alpha.pth  vary_params_group1_alpha_direction.pth  vary_params_group1_alpha_ranking.pth  vary_params_group1_pretrained.pth  vary_params_group1_pretrained_direction.pth  vary_params_group1_pretrained_ranking.pth
src/: bayesian_models.py  environments.py  model.py  utils.py
trained_networks/: alpha_cross_128_2_0.pth  alpha_cross_128_4_0.pth  alpha_cross_128_6_0.pth  alpha_cross_32_2_0.pth  alpha_cross_32_4_0.pth  alpha_cross_32_6_0.pth  alpha_cross_64_2_0.pth  alpha_cross_64_4_0.pth  alpha_cross_64_6_0.pth  alpha_direction_cross_128_2_0.pth  alpha_direction_cross_128_4_0.pth  alpha_direction_cross_128_6_0.pth  alpha_direction_cross_32_2_0.pth  alpha_direction_cross_32_4_0.pth  alpha_direction_cross_32_6_0.pth  alpha_direction_cross_64_2_0.pth  alpha_direction_cross_64_4_0.pth  alpha_direction_cross_64_6_0.pth  alpha_ranking_cross_128_2_0.pth  alpha_ranking_cross_128_4_0.pth  (+34 more)
